--- a/src/assets/pages/home.css
+++ b/src/assets/pages/home.css
@@ -69,3 +69,20 @@
   width: 100%;
   font-weight: 700;
 }
+
+.search-suggestions {
+  position: absolute;
+  left: 0;
+  right: 0;
+  border: .1rem solid var(--info);
+}
+
+.btn-suggestion.form-input:hover {
+  background-color: var(--info);
+}
+
+.btn-suggestion {
+  background-color: #fff;
+  width: 100%;
+  display: inline-block;
+}
