--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --primary: #E02F90;
-  --info: #FFDEF1;
+  --primary: #e02f90;
+  --info: #ffdef1;
   --danger: #DC3545;
 
   /* Fonts colors */
